fix(module:date-picker): arrow in wrong position for RTL direction

--- a/components/date-picker/style/patch.less
+++ b/components/date-picker/style/patch.less
@@ -26,3 +26,8 @@
     width: inherit;
   }
 }
+
+// make arrow in the right position in right direction
+.@{picker-prefix-cls}-range-arrow {
+  margin-right: @input-padding-horizontal-base * 1.5;
+}
